Added KMS commands
- formatted code
- dumped commands to tracker

Signed-off-by: Andres LeonRangel <aleon1220@gmail.com>

--- a/2020-10-06.md
+++ b/2020-10-06.md
@@ -26,19 +26,20 @@ kubectl completion bash >>  ~/.bash_completion
 . ~/.bash_completion
 
 ## https://www.eksworkshop.com/020_prerequisites/k8stools/#set-the-aws-alb-ingress-controller-version
-echo 'export ALB_INGRESS_VERSION="v1.1.8"' >>  ~/.bash_profile
-.  ~/.bash_profile
-
-
+`echo 'export ALB_INGRESS_VERSION="v1.1.8"' >>  ~/.bash_profile
+.  ~/.bash_profile`
 - replace IAM role in EC2 that controls cloud9 eksworkshop-admin
 
 
 ## Set AWS region through CLI
+
+```bash
 export ACCOUNT_ID=$(aws sts get-caller-identity --output text --query Account)
 export AWS_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
+```
 
 ## Save details to bash profile
-```
+```bash
 echo "export ACCOUNT_ID=${ACCOUNT_ID}" | tee -a ~/.bash_profile
 echo "export AWS_REGION=${AWS_REGION}" | tee -a ~/.bash_profile
 aws configure set default.region ${AWS_REGION}
@@ -90,15 +91,17 @@ curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/d
 sudo mv -v /tmp/eksctl /usr/local/bin
 
 ## EKS CTL bash completion
+```bash
 eksctl completion bash >> ~/.bash_completion
 . /etc/profile.d/bash_completion.sh
 . ~/.bash_completion
+```
 
-# LAunch EKS
+# Launch EKS Cluster
 - check IAM
-- create deployment file eksworkshop.yaml
+- create deployment file `eksworkshop.yaml`
 - launch with
-eksctl create cluster -f eksworkshop.yaml
+`eksctl create cluster -f eksworkshop.yaml`
 
 ``` bash
 andres-leonRangel:~/environment $ eksctl create cluster -f eksworkshop.yaml
@@ -142,17 +145,21 @@ andres-leonRangel:~/environment $ eksctl create cluster -f eksworkshop.yaml
 ```
 # TEST THE CLUSTER
 ## kubectl get nodes # if we see our 3 nodes, we know we have authenticated correctly
+```bash
 STACK_NAME=$(eksctl get nodegroup --cluster eksworkshop-eksctl -o json | jq -r '.[].StackName')
 ROLE_NAME=$(aws cloudformation describe-stack-resources --stack-name $STACK_NAME | jq -r '.StackResources[] | select(.ResourceType=="AWS::IAM::Role") | .PhysicalResourceId')
 echo "export ROLE_NAME=${ROLE_NAME}" | tee -a ~/.bash_profile
+```
 
 # BEGINNER EKS workshop
 ## 1 Kubernetes Dashboard
+```bash
 export DASHBOARD_VERSION="v2.0.0"
 
 kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/${DASHBOARD_VERSION}/aio/deploy/recommended.yaml
-``` bash
-andres-leonRangel:~/environment $ kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/${DASHBOARD_VERSION}/aio/deploy/recommended.yaml
+
+## output
+kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/${DASHBOARD_VERSION}/aio/deploy/recommended.yaml
 namespace/kubernetes-dashboard created
 serviceaccount/kubernetes-dashboard created
 service/kubernetes-dashboard created
@@ -173,9 +180,49 @@ deployment.apps/dashboard-metrics-scraper created
 `aws eks get-token --cluster-name eksworkshop-eksctl | jq -r '.status.token'`
 
 ## CLEANUP K8S Dashboard
-pkill -f 'kubectl proxy --port=8080'
+`pkill -f 'kubectl proxy --port=8080'`
 
 # delete dashboard
-kubectl delete -f https://raw.githubusercontent.com/kubernetes/dashboard/${DASHBOARD_VERSION}/aio/deploy/recommended.yaml
+`kubectl delete -f https://raw.githubusercontent.com/kubernetes/dashboard/${DASHBOARD_VERSION}/aio/deploy/recommended.yaml`
 
 unset DASHBOARD_VERSION
+
+```bash
+aws ec2 import-key-pair --key-name "eksworkshop" --public-key-material file://~/.ssh/id_rsa.pub
+{
+    "KeyFingerprint": "11:1a:bf:21:97:69:50:a1:fc:d7:08:5b:42:05:4a:9a",
+    "KeyName": "eksworkshop",
+    "KeyPairId": "key-02723750093f8b7da"
+}
+```
+
+# AWS KMS CUSTOM MANAGED KEY (CMK)
+Create a CMK for the EKS cluster to use when encrypting your Kubernetes secrets:
+```bash
+aws kms create-alias --alias-name alias/eksworkshop --target-key-id \
+  $(aws kms create-key --query KeyMetadata.Arn --output text)
+```
+
+Let’s retrieve the ARN of the CMK to input into the create cluster command.
+```bash
+export MASTER_ARN=$(aws kms describe-key --key-id alias/eksworkshop --query KeyMetadata.Arn --output text)
+```
+Let’s retrieve the ARN of the CMK to input into the create cluster command.
+```bash
+export MASTER_ARN=$(aws kms describe-key --key-id alias/eksworkshop --query KeyMetadata.Arn --output text)
+```
+
+We set the MASTER_ARN environment variable to make it easier to refer to the KMS key later.
+Now, let’s save the MASTER_ARN environment variable into the bash_profile
+
+`echo "export MASTER_ARN=${MASTER_ARN}" | tee -a ~/.bash_profile`
+
+# EKS commands
+`kubectl get nodes`
+
+## Export the Worker Role Name
+```bash
+STACK_NAME=$(eksctl get nodegroup --cluster eksworkshop-eksctl -o json | jq -r '.[].StackName')
+ROLE_NAME=$(aws cloudformation describe-stack-resources --stack-name $STACK_NAME | jq -r '.StackResources[] | select(.ResourceType=="AWS::IAM::Role") | .PhysicalResourceId')
+echo "export ROLE_NAME=${ROLE_NAME}" | tee -a ~/.bash_profile
+```
